# FPLGaffer2

./: .gitignore  CLAUDE.md  README.md  gaffer-mac.spec  gaffer-windows.spec  launcher.py  pyproject.toml  requirements.txt  setup-mac.sh
.github/workflows/: build-exe.yml
docs/plans/: 2026-02-23-audit-fixes.md  2026-02-23-backtest-ui.md  2026-02-25-season-manager-redesign.md  2026-02-25-season-manager-v2-implementation.md
scripts/: analyze_captain.py  optimize_blend.py
src/: __main__.py  config.py  logging_config.py  paths.py
src/api/: __init__.py  backtest_bp.py  compare_bp.py  core.py  helpers.py  middleware.py  prices_bp.py  prices_standalone_bp.py  season_bp.py  season_v2_bp.py  sse.py  strategy_bp.py  team.py
src/data/: __init__.py  cache.py  fpl_api.py  github_csv.py  loader.py  season_detection.py
src/db/: __init__.py  connection.py  migrations.py  repositories.py  schema.py
src/features/: __init__.py  builder.py  element_history.py  fixture_context.py  interactions.py  opponent_history.py  player_rolling.py  playerstats.py  registry.py  rest_congestion.py  targets.py  team_stats.py  upside.py  venue_form.py
src/ml/: __init__.py  backtest.py  decomposed.py  model_store.py  multi_gw.py  prediction.py  training.py
src/schemas/: __init__.py  fpl_rules.py  player.py  prediction.py
src/season/: __init__.py  dashboard.py  fixtures.py  manager.py  manager_v2.py  preseason.py  recorder.py  scheduler.py  state_machine.py
tests/: conftest.py  test_correctness.py  test_integration.py  test_state_machine.py  test_strategy_pipeline.py
(+15 files in other folders)
