[project]
name = "fplgaffer2"
version = "2.0.0"
description = "FPL Gaffer — the brAIn: autonomous Fantasy Premier League manager"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "requests>=2.31",
    "joblib>=1.3",
    "flask>=3.0",
    "pydantic>=2.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
